--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
         <h2 class="titles">About me</h2>
         <img class="rox" src="img/mohamedreda.jpg"placeholder image" width="300px">
         <div class="rom">
-        <p>I choose packaging design 5 years ago as a part-time and now I am working full time and designing high-quality, attractive, professional, and unique designs to satisfy my all clients.
-            To give the high-quality work I complete the diplomas and courses to learn new things and make them an expert.
-            The software I use to create the perfect design for your product that is Adobe Photoshop and Adobe Illustrator.
-            If you are finding the designer then I am perfect for you because I have all things that you need to get the design.
-            I have skills, experience, client satisfaction, professional design, fast communication, and many more things that I offer my all clients.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
     </div><br>
     <div class="projectsdiv">
@@ -93,5 +91,31 @@
             <p class="lang"><strong class="str">French</strong> Beginner</p>
         </div>
     </div>
+    <div>
+        <div class="languagediv">
+            <h2 class="titles">Social Network</h2>
+            <div class="Network5">
+               <p class="lang1"><img src="img/twitter.png" alt="" style="width: 9%"> @David_Folley</p>
+            </div>
+            <div class="Network6">
+               <p class="lang2"><img src="img/linkedin.png" alt="" style="width: 9%"> David Folley</p>
+            </div>
+            <div class="Network7">
+               <p class="lang3"><img src="img/dribbble.png" alt="" style="width:9%"> David Folley</p>
+            </div>
+        </div>
+    </div>
+    <div class="languagediv2">
+        <h2 class="titles">Contact</h2>
+            <form>
+                <input type="email" class="from-control" id="email" placeholder="Email" size="130"><br><br>
+                <input type="text" class="from-control" id="subject" placeholder="Subject" size="130"><br><br>
+                <textarea name="text" rows="12" cols="90" placeholder="Enter your message"></textarea><br><br>
+                <button type="submit" class="btn btn-primary">Send massage</button>
+            </form>
+    </div>
+    <div>
+        <img class="back" src="img/mohamedreda.jpg" alt="">
+    </div>
 </body>
-</html> 
+</html>
