--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     <br> 
     <div class="projectsdiv">
         <h2 class="titles">About me</h2>
-        <img class="rox" src="img/mohamedreda.jpg"placeholder image" width="300px">
         <div class="rom">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        <img src="img/mohamedreda.jpg" alt="Me">
+        
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut<br> labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris<br> nisi ut aliquip ex ea commodo consequat.
 
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            Duis aute irure dolor in reprehenderit in voluptate <br> velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,<br> sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
     </div><br>
     <div class="projectsdiv">
-        <h2 class="titles">Projects</h2>
+        <h2 class="titles5">Projects</h2>
         <div class="projectsphotos">
         <div class="project">
             <img src="IMG/dims.jpg" alt="Mountains" style="width:100%">
@@ -43,7 +44,7 @@
     </div><br>      
     <div class="projectsdiv">
         <div class="workdiv">
-            <h2 class="titles">Work</h2>
+            <h2 class="titles1">Work</h2>
             <div class="work1">
                 <p class="workd">2017-2015</p>
                 <h3 class="workt">Web developer - Orson.io</h3>
@@ -76,7 +77,7 @@
             <p class="educationuni">Pascal's Lee Studio</p>
         </div>
     </div>
-    </div>
+    
     <div class="languagediv">
         <h2 class="titles">Language</h2>
         <div class="language1">
@@ -93,15 +94,15 @@
     </div>
     <div>
         <div class="languagediv">
-            <h2 class="titles">Social Network</h2>
+            <h2 class="titles3">Social Network</h2>
             <div class="Network5">
-               <p class="lang1"><img src="img/twitter.png" alt="" style="width: 9%"> @David_Folley</p>
+               <p class="lang1"><img src="img/twitter.png" alt="wannajlae" style="width: 9%"> @David_Folley</p>
             </div>
             <div class="Network6">
-               <p class="lang2"><img src="img/linkedin.png" alt="" style="width: 9%"> David Folley</p>
+               <p class="lang2"><a></a><img src="img/linkedin.png" alt="wanmohamed" style="width: 9%"> David Folley</p>
             </div>
             <div class="Network7">
-               <p class="lang3"><img src="img/dribbble.png" alt="" style="width:9%"> David Folley</p>
+               <p class="lang3"><img src="img/dribbble.png" alt="wanreda" style="width:9%"> David Folley</p>
             </div>
         </div>
     </div>
@@ -115,7 +116,7 @@
             </form>
     </div>
     <div>
-        <img class="back" src="img/mohamedreda.jpg" alt="">
+        <img class="back" src="img/mohamedreda.jpg" alt="wanheda">
     </div>
 </body>
 </html>
